<resources>
    <string name="app_name">WeatherDemo</string>

    <string name="search">Search</string>
    <string name="search_hint">Search by name or postcode</string>
    <string name="location">Location</string>

    <string name="permission_rationale">Location permission is needed</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed.</string>
    <string name="settings">Settings</string>

    <string name="temp">Temperature</string>
    <string name="feellike">Feel like</string>
    <string name="temp_min">Min Temperature</string>
    <string name="temp_max">Max Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="wind">Wind</string>
    <string name="cloud">Clouds</string>
    <string name="current_city">currentCity</string>
    <string name="current_country">currentCountry</string>

    <string name="ddMM_format">dd/MM</string>
    <string name="today">Today</string>
    <string name="updated">Updated</string>
    <string name="delete">delete</string>
    <string name="cancel">cancel</string>
</resources>
