<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cityInfo"
            type="com.example.weatherdemo.data.model.City" />

        <variable
            name="mainData"
            type="com.example.weatherdemo.data.model.MainData" />

        <variable
            name="windInfo"
            type="com.example.weatherdemo.data.model.Wind" />
        <variable
            name="cloudsInfo"
            type="com.example.weatherdemo.data.model.Clouds" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rootLayout"
        tools:context=".MainActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"/>

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBar"/>

        <TextView
            android:id="@+id/weather_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@{mainData.temp + `F`}"
            app:layout_constraintStart_toEndOf="@id/temp"
            app:layout_constraintTop_toBottomOf="@id/appBar"/>

        <TextView
            android:id="@+id/feelslike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/feellike"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp"/>

        <TextView
            android:id="@+id/weather_feellike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@{mainData.feels_like + `F`}"
            app:layout_constraintStart_toEndOf="@id/feelslike"
            app:layout_constraintTop_toBottomOf="@id/temp"/>

        <TextView
            android:id="@+id/temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/temp_min"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feelslike"/>

        <TextView
            android:id="@+id/weather_temp_min"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@{mainData.temp_min + `F`}"
            app:layout_constraintStart_toEndOf="@id/temp_min"
            app:layout_constraintTop_toBottomOf="@id/feelslike"/>

        <TextView
            android:id="@+id/temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/temp_max"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_min"/>

        <TextView
            android:id="@+id/weather_temp_max"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@{mainData.temp_max + `F`}"
            app:layout_constraintStart_toEndOf="@id/temp_max"
            app:layout_constraintTop_toBottomOf="@id/temp_min"/>

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/humidity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/temp_max"/>

        <TextView
            android:id="@+id/weather_humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@{mainData.humidity + `%`}"
            app:layout_constraintStart_toEndOf="@id/humidity"
            app:layout_constraintTop_toBottomOf="@id/temp_max"/>

        <TextView
            android:id="@+id/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/wind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity"/>

        <TextView
            android:id="@+id/weather_wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@{windInfo.speed + `km/h`}"
            app:layout_constraintStart_toEndOf="@id/wind"
            app:layout_constraintTop_toBottomOf="@id/humidity"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
